# opine-world

./: .env.example  .gitignore  .gitmodules  README.md  play.py  pyproject.toml  run.sh
docker/: Dockerfile.agent  Dockerfile.gateway  build.sh  egress_test.sh  gateway_up.sh
docs/: README.md  build_site_data.py  gen_scoreboards.py  index.html  make_gif.py  make_scoreboard.html  make_scoreboard_bold.html  make_scoreboard_clean.html  make_scoreboard_mono.html  make_scoreboard_nobar.html  make_site_tour.py
docs/assets/: arcprize_baselines.json  effort_ladders.json  eta_data.js  site_data.js
scripts/: download_cloud_games.py  setup_agent_pkgs.sh
src/opine_world/synth_loop/: agentic_consumer.py  aliases.py  click_utils.py  codex_backend.py  domain_adapter.py  engine.py  epistemic.py  ontology.py  planner.py  prompt_safety.py  prompts.py  publish.py  runlog.py  sandbox.py  spriteless_eta.py  vision.py
src/opine_world/synth_loop/adapters/: __init__.py  arcengine_adapter.py
src/opine_world/synth_loop/prompts/analyzer/frames/: system.md  tools_readme.md  tools_readme_escape.txt  tools_readme_nowm.txt  tools_readme_wm.txt
src/opine_world/synth_loop/prompts/analyzer/object_centric/: system.md  tools_readme.md  tools_readme_escape.txt  tools_readme_nowm.txt  tools_readme_wm.txt
src/opine_world/synth_loop/prompts/analyzer/shared/: death.txt  divergence_preamble.txt  initial_diverse_probe.txt  initial_user_task.txt  stuck.txt  (+4 more)
src/opine_world/synth_loop/prompts/engine/: goal_hint.md
src/opine_world/synth_loop/prompts/synthesizer/: animation_analysis.md  critique.md
(+15 files in other folders)
